# goban

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  dev_lazy  v2_lazy
.github/workflows/: compare.yml
benches/: deadstones.rs  perft.rs
sgf/: ShusakuvsInseki.sgf
sgf-parser/: Cargo.toml  README.md  sgf.pest
sgf-parser/src/: error.rs  lib.rs  node.rs  parser.rs  token.rs  tree.rs
sgf-parser/tests/: model.rs  node.rs  parse.rs  sgf_file.rs  token.rs  tree.rs
sgf-parser/tests/sgf/: ShusakuvsInseki.sgf
src/: game_tree.rs  goban.rs  lib.rs
src/benches/: perft.rs
src/ffi/: mod.rs  python.rs
src/pieces/: chain.rs  const_goban.rs  go_string.rs  go_string_new.rs  goban.rs  goban_string.rs  graph.rs  group.rs  mod.rs  neighbor.rs  neighbors.rs  stones.rs  territory.rs  util.rs  zobrist.rs
src/rules/: dead_stones.rs  deadstones.rs  game.rs  game_builder.rs  graph.rs  mod.rs  sgf_bridge.rs
tests/: ShusakuvsInseki.sgf  bench.rs  general_tests.rs  mcts.rs  sgf_1.sgf  sgf_2_2ha.sgf
