[package]
name = "goban"
version = "0.18.0"
authors = ["Samuel Batissou <samuelbatissou@gmail.com>"]
readme = "README.md"
description = "Library for Go move generation and Go ruling."
edition = "2021"
license = "MIT"
repository = "https://github.com/Sagebati/goban"
keywords = ["go", "game", "baduk", "igo", "move_generation"]

[badges]
gitlab = { repository = "Sabati/goban" }
maintenance = { status = "actively-developed" }

[features]
history = []
deadstones = ["rand", "oxymcts"]

[dependencies]
bitflags = "^1.3"
getset = "0.1.2"
hash_hasher = "^2.0.3"
sgf-parser = "^2.6"
arrayvec = { path = "arrayvec" }
rand = { version = "0.8.5", optional = true }
oxymcts = { version = "0.1.0", optional = true }

[dev-dependencies]
criterion = "0.3.6"
rand = "0.8.5"

[profile.bench]
lto = "fat"
codegen-units = 1
debug = true
debug-assertions = false

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "deadstones"
harness = false
required-features = ["deadstones"]
