[package]
name = "goban"
version = "0.20.0"
authors = ["Samuel Batissou <samuelbatissou@gmail.com>"]
readme = "README.md"
description = "Library for Go move generation and Go ruling."
edition = "2021"
license = "MIT"
repository = "https://github.com/Sagebati/goban"
keywords = ["go", "game", "baduk", "igo", "move_generation"]

[badges]
gitlab = { repository = "Sabati/goban" }
maintenance = { status = "actively-developed" }

[features]
history = []
deadstones = ["dep:rand", "dep:oxymcts"]

[dependencies]
bitflags = "1"
hash_hasher = "2"
sgf-parser = "2"
arrayvec = "0.7"
rand = { version = "0.9.0", optional = true }
oxymcts = { version = "0.1.0", optional = true }
nonmax = "0.5.5"
indexmap = "2"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"

[profile.bench]
debug = true
debug-assertions = false

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "deadstones"
harness = false
required-features = ["deadstones"]
