[package]
name = "sgf-parser"
version = "1.0.0"
authors = ["Michael A. Plikk <michael@plikk.com>"]
edition = "2018"
license = "MIT"
description = "A library for parsing SGF files"
repository = "https://github.com/mipli/sgf-parser"
documentation = "https://docs.rs/sgf-parser/latest/sgf-parser/"
readme = "README.md"
keywords = ["parser", "sgf", "go", "baduk", "weiqi"]

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
derive_more = "0.15.0"
